force-app/main/default/objects/Product2/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Unit Price</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>