force-app/main/default/objects/Product2/fields/Is_A_Service__c.field-meta.xml
<CustomField>
    <fullName>Is_A_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Denotes whether service is a product</inlineHelpText>
    <label>Is A Service</label>
    <type>Checkbox</type>
</CustomField>