force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Is_A_Service__c</columns>
    <columns>Currency__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Stock_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>